cluster/apps/media-stack/qbittorrent/qbittorrent-deployment.yaml
# cluster/apps/media-stack/qbittorrent/qbittorrent-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: qbittorrent
  namespace: media-stack
  labels:
    app: qbittorrent
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: qbittorrent
  template:
    metadata:
      labels:
        app: qbittorrent
    spec:
      containers:
        - name: qbittorrent
          image: lscr.io/linuxserver/qbittorrent:latest
          ports:
            - name: webui
              containerPort: 8080
            - name: torrent-tcp
              containerPort: 6881
            - name: torrent-udp
              containerPort: 6881
              protocol: UDP
          volumeMounts:
            - name: config
              mountPath: /config
              subPath: qbittorrent 
            - name: downloads
              mountPath: /media
      volumes:
        - name: config
          persistentVolumeClaim:
            claimName: qbittorrent-config
        - name: downloads
          hostPath:
            path: /mnt/windows-media
